--- a/languages/R/build
+++ b/languages/R/build
@@ -25,6 +25,7 @@ rm -rf po
     --sysconfdir=/etc/R \
 	--localstatedir=/var \
 	--libdir=/usr/lib \
+    rhome=/usr  \
 	rdocdir=/usr/share/doc/R \
 	rincludedir=/usr/include/R \
 	rsharedir=/usr/share/R \
@@ -53,24 +54,11 @@ make -C src/nmath/standalone
 make DESTDIR="$1" -C src/nmath/standalone install
 
 # Fixup R wrapper script (taken from Arch).
-rm -rf "$1usr/lib/R/bin/R"
 ln -sf "$1/usr/bin/R" "$1/usr/lib/R/bin/R"
 
 # Remove some useless files (COPYING is duplicated, it will be
 # in -doc, don't worry).
 rm "$1/usr/lib/R/COPYING" "$1/usr/lib/R/SVN-REVISION"
-
-mkdir -p "$1/etc/R"
-
-# R apparently ignores --sysconfdir, so we must manually move configs
-# to /etc/R and make symlinks.
-(
-    cd "$1/usr/lib/R/etc"
-
-    for i in *; do
-        mv "$i" "$1/etc/R" && ln -sf "$1/etc/R/$i" "$i"
-    done
-)
 
 rm -rf "$1/usr/lib/R/library/translations"
 rm -rf "$1/usr/share/R/licenses"
