vala: update buildfile

--- a/languages/vala/build
+++ b/languages/vala/build
@@ -9,4 +9,6 @@ make DESTDIR="$1" install
 
 # Remove unnecessary stuff
 find "$1" -name "*.la" -exec rm -rf {} +
+
+# Dir is not needed
 rm -rf "$1/usr/share/devhelp"
