--- a/languages/nim/build
+++ b/languages/nim/build
@@ -4,33 +4,25 @@
     cd csources
 
     # Build nim source files
-    echo "Building nim csources..."
     ./build.sh
 )
 
 # Build a release version of the "koch" maintenance program
-echo "Building koch..."
 bin/nim compile -d:release koch
 
 # Build a release version of the nim compiler
-echo "Building nim..."
-./koch boot -d:release 
+./koch boot -d:release
 
 # Build nimsuggest, nimgrep, and nimpretty
-echo "Building nimsuggest, nimpretty, nimgrep..."
 ./koch tools
 
 # Build nimrtl.nim
 (
-    echo "Building nimrtl..."
     cd lib
     ../bin/nim c --app:lib -d:createNimRtl -d:release nimrtl.nim
 )
 
-# Nim
-#./koch install "$1"
-
-# installs bins / dirs
+# Installs bins / dirs
 install -Dm755 bin/nim "$1/usr/bin/nim"
 install -Dm755 bin/nimble "$1/usr/bin/nimble"
 install -Dm755 bin/nimgrep "$1/usr/bin/nimgrep"
