--- a/languages/r-lang/build
+++ b/languages/r-lang/build
@@ -47,7 +47,12 @@ rm -rf po
     gcc=gfortran \
     LIBnn=Lib
 
-make
+# The R build sytem assumes that DESTDIR is only set at install
+# This behaviour is unexpected, the result of this is that it 
+# the DESTDIR to it's initial mkdir calls
+# https://github.com/kisslinux/kiss/issues/258
+# https://github.com/r-lib/rlang/issues/1246
+make DESTDIR=""
 make DESTDIR="$1" install
 
 # Install libRmath.so.
