ruby ~> 3.1.0 || compile with openssl

--- a/languages/ruby/build
+++ b/languages/ruby/build
@@ -3,7 +3,8 @@
 ./configure \
     --prefix=/usr \
     --enable-shared \
-    --disable-rpath
+    --disable-rpath \
+    --with-openssl-dir=/usr
 
 make
 make DESTDIR="$1" install
