--- a/languages/crystal/build
+++ b/languages/crystal/build
@@ -1,7 +1,9 @@
 #!/bin/sh -e
 
+ patch -p1 < fix-crystal-sh.patch
+
 export PATH="core/bin:$PATH"
-export CRYSTAL_CONFIG_VERSION="1.2.0"
+export CRYSTAL_CONFIG_VERSION="1.3.2"
 export EXPORT_CC="CC=cc"
 
 make crystal \
@@ -9,9 +11,7 @@ make crystal \
     CRYSTAL_CACHE_DIR=".tmp/crystal" \
     LLVM_CONFIG="/usr/bin/llvm-config" \
     release=1 \
-    FLAGS="--no-debug" \
-    CRYSTAL_PATH="src"
-
+    FLAGS="--no-debug"
 
 install -Dm755 .build/crystal "$1/usr/bin/crystal"
 
