--- a/languages/ruby/build
+++ b/languages/ruby/build
@@ -6,5 +6,8 @@
     --disable-rpath \
     --with-openssl-dir=/usr
 
+sed 's/} > $@/} | tee $@/g' Makefile > _
+mv -f _ Makefile
+
 make
 make DESTDIR="$1" install
