--- a/languages/julia/build
+++ b/languages/julia/build
@@ -2,14 +2,17 @@
 
 export PATH="bin:$PATH"
 
-build_opts="prefix=/usr \
-  bindir=/usr/bin \
-  sysconfdir=/etc \
-  MARCH=x86-64"
-
-
 git submodule init
 git submodule update
 
-make release VERBOSE=1 JLDFLAGS=${LDFLAGS} $build_opts
-make DESTDIR="$1" install VERBOSE=1 $build_opts
+make release VERBOSE=1 JLDFLAGS="${LDFLAGS}" \
+  prefix=/usr \
+  bindir=/usr/bin \
+  sysconfdir=/etc \
+  MARCH=x86-64
+
+make DESTDIR="$1" install VERBOSE=1 \
+  prefix=/usr \
+  bindir=/usr/bin \
+  sysconfdir=/etc \
+  MARCH=x86-64
